--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@moralisweb3/common-evm-utils": "^2.12.0",
     "chart.js": "^4.2.0",
+    "express": "^4.18.2",
+    "moralis": "^2.12.0",
     "next": "latest",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
