--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.12.0",
     "chart.js": "^4.2.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moralis": "^2.12.0",
     "next": "latest",
