--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   },
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.12.0",
+    "@web3modal/ethereum": "^2.1.1",
+    "@web3modal/react": "^2.1.1",
     "chart.js": "^4.2.0",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "moralis": "^2.12.0",
     "next": "latest",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-switch": "^7.0.0"
+    "react-switch": "^7.0.0",
+    "wagmi": "^0.11.7"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
